# interpretador-lp

./: Cargo.toml  README.md
ilp/: Cargo.toml
ilp-app/: package-lock.json  package.json
ilp-app/src/: App.css  App.tsx
ilp-app/src-tauri/: Cargo.toml  tauri.conf.json
ilp-app/src-tauri/src/: main.rs
ilp/src/: evaluation.rs  lexer.rs  lib.rs  parser.rs
src/: evaluation.rs  lexer.rs  lib.rs  parser.rs  table.rs
